# multiclock

./: Cargo.toml  README.md
doc/: multiclock.service  nginx.conf
src/: main.rs
templates/: base.html.tera
templates/clocks/: new.html.tera  show.html.tera
