[package]
name = "multiclock"
version = "0.1.0"
authors = ["Paul A. Jungwirth <pj@illuminatedcomputing.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "1"
tungstenite = "0.11"
regex = "1.4"
lazy_static = "1.4"
hashids = { git = "https://github.com/pjungwir/hashids_rust", branch = "master" }

[dependencies.rocket_contrib]
default-features = false
features = ["json", "tera_templates"]
